erDiagram
  resources ||--o{ availability_slots : exposes
  customers ||--o{ reservations : makes
  availability_slots ||--o{ reservations : books
  reservations ||--|| reservation_payments : paid_by

  resources {
    bigint id PK
    text name
    text kind
  }

  customers {
    bigint id PK
    text email
  }

  availability_slots {
    bigint id PK
    bigint resource_id FK
    timestamptz starts_at
    timestamptz ends_at
    int capacity
  }

  reservations {
    bigint id PK
    bigint slot_id FK
    bigint customer_id FK
    int quantity
    text status
  }

  reservation_payments {
    bigint id PK
    bigint reservation_id FK
    int amount_cents
    text status
  }
